--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt, a4paper]{article}
+\documentclass[10pt,a4paper,draft]{article}
 
 % include stuff
 \usepackage[utf8]{inputenc}
@@ -8,51 +8,95 @@
 \usepackage{longtable}
 %\usepackage{multirow}
 \usepackage[T1]{fontenc}
+\usepackage{todonotes} %[disable]
 
-% document related
-\title{JACUSA manual \\ Version 1.2}
-\author{Michael Piechotta \\ michael.piechotta@age.mpg.de}
-\date{March 6, 2017} 
+% document relatedf
+\title{JACUSA2 manual}
+\author{Michael Piechotta \\ michael.piechotta@gmail.com}
+\date{10th, March, 2019} 
 
 % --------------------------------------------------------------------------------------------------
 \begin{document}
 % --------------------------------------------------------------------------------------------------
-\maketitle \tableofcontents
+\maketitle 
+\tableofcontents
+\listoftodos
 % --------------------------------------------------------------------------------------------------
 \section{Introduction}
-JAVA framework for accurate SNV assessment (JACUSA) is a one-stop solution to detect single
-nucleotide variants (SNVs) from comparing matched sequencing samples. Robust identification has
-proven to be a daunting task due to artefacts specific for NGS-data and employed mapping
-strategies. We implement various feature filters that reduce the number of false positives. JACUSA
-employs a window-based approach to traverse provided BAM files featuring highly parallel processing.
-JACUSA has been extensively evaluated and optimized to identify RNA editing sites in RNA-DNA and
-RNA-RNA sequencing samples. JACUSA requires an operating JAVA environment and uses sorted and
+\todo{replace SNV with something more general}JAVA framework for accurate SNV assessment (JACUSA2) is a one-stop solution to detect single
+nucleotide variants (SNVs) and reverse transcriptase induced arrest events in Next-generation 
+sequencing (NGS) samples. 
+\todo[author=michael]{make a text out of this}
+\begin{itemize}
+  \item \url{https://github.com/dieterich-lab/JACUSA2/}{JACUSA2} direct successor of 
+  \url{https://github.com/dieterich-lab/JACUSA/}{JACUSA1} --- JACUSA1 is hereby deprecated and won't be continued
+  \item all methods from JACUSA1 are available in JACUSA2
+  \item reverse transcriptase arrest events can be identified
+  \item explain briefly rt-arrest and lrt-arrest
+  \item stratification by read base changes
+  \item number of deletion per site can be calculated 
+  \item command line changes: only one dash options, two dash options have been removed
+  \item new architecture -> ~3x faster than JACUSA1
+  \item new filter(s): exclude/mark SNP/variants/regions
+  \item some filters habe been move to JACUSA2helper
+  \item htsjdk to parse BAM files
+\end{itemize}
+
+JACUSA2 employs a window-based approach to traverse provided BAM files featuring highly parallel 
+processing and utilizing the new \url{https://github.com/samtools/htsjdk}{htsjdk} framework.
+
+\subsection{Variant calling}
+Robust identification of variants has proven to be a daunting task due to artefacts specific 
+for NGS-data and employed mapping strategies. 
+We implement various feature filters that reduce the number of false positives. 
+
+JACUSA2 has been extensively evaluated and optimized to identify RNA editing sites in RNA-DNA and
+RNA-RNA sequencing samples. JACUSA2 requires an operating JAVA environment and uses sorted and
 indexed BAM files as input.
+\subsection{Reverse transcriptase arrest events}
+\todo[author=michael]{makr nice text}
+Reverse transcriptase arrest events can be induced during library preparation. 
+They are identified by shorter than expected read length due to premature termination during first 
+strand synthesis. Per site a vector of read through and read arrest can be calculated and compared between conditions.
+Read through and read arrest events are modelled by the Beta-Binomial distribution.
 % --------------------------------------------------------------------------------------------------
 \section{Download}
-Download the latest version of JACUSA from \href{https://github.com/dieterich-lab/JACUSA/blob/master/build/JACUSA_v1.2.0.jar}. 
-Check the source in the repository on \href{https://github.com/dieterich-lab/JACUSA}{GiTHub}.
+The latest version of JACUSA2 can be obtained from \url{https://github.com/dieterich-lab/JACUSA2/}{JACUSA2}.
+Got to releases and pick the lastest release, currently: \todo[author=michael]{How to automate this?} 
+\url{https://github.com/dieterich-lab/JACUSA2/releases/download/2.0.0-RC2/JACUSA_v2.0.0-RC3.jar}{JACUSA2 2.0.0-RC3} 
 % --------------------------------------------------------------------------------------------------
 \subsection{Installation and requirements}
-JACUSA does not need any configuration but needs a correctly configured Java environment.
-We developed and tested JACUSA with Java v1.7. If you encounter any Java related problems please
-consider to change to Java v1.7.
+JACUSA2 does not need any configuration but needs a correctly configured Java environment.
+We developed and tested JACUSA2 with Java v1.8. If you encounter any Java related problems please
+consider to change to Java v1.8.
+% --------------------------------------------------------------------------------------------------
+\subsection{Migrating from JACUSA1 to JACUSA2}
+\todo[author=michael]{make a text out of this}
+\begin{itemize}
+  \item command line parameters can ONLY be provided by one dash ``-'' options, e.g.: ``-c 10''
+  \item all two dash options ``--option [\ldots]'' have been removed and are NOT available anymore
+  \item ``--filterNH'' and ``--filterNM'' been replaced in JACUSA2 with ``-filterNH'' and ``-filterNM''
+  \item \todo[author=michael]{I might support old format} the CLI format to provide library type for each condition has changed:
+  JACUSA1: ``-P Lib1,Lib2'', JACUSA2: ``-P1 Lib1 -P2 Lib2''.
+  \item JACUSA2 adds a ``\#\#'' prefixed header line to the default output file format that contains command line options and used JACUSA2 version.
+\end{itemize}
 % --------------------------------------------------------------------------------------------------
 \subsection{Sample \textit{in silico} data}
-Download sample data that we used for the development of JACUSA. You can choose between different
-setups and species where the later greatly influences the data size and running time to detect
-variants. The gDNA VS cDNA represents the typical data setup that is encountered in detection of RNA
-editing sites via comparing genomic and transcriptomic sequencing reads. In this setup, variants
-have been only imputed to the cDNA BAM file. The cDNA VS cDNA data setup can be interpreted as
+\subsubsection{Variant calling}
+You can choose between different setups and species where the later greatly influences the data size 
+and running time to detect variants. The gDNA VS cDNA represents the typical data setup that is 
+encountered in detection of RNA editing sites via comparing genomic and transcriptomic sequencing reads. 
+In this setup, variants have been only imputed to the cDNA BAM file. The cDNA VS cDNA data setup can be interpreted as
 representing allele specific expression of single variants or differential RNA editing. In this
 setup, variants with pairwise different base frequency have been imputed into both cDNA BAM files.
 Additionally, to make the identification of variants more challenging SNPs with pairwise similar base
 frequencies have been included to both BAM files. This sites should not be identified as true
 positive sites.
+
 gDNA data has been simulate with
-art\footnote{\href{http://www.niehs.nih.gov/research/resources/software/biostatistics/art/}{art}}
+art\footnote{\url{http://www.niehs.nih.gov/research/resources/software/biostatistics/art/}{art}}
 and cDNA reads have been simulated with
-flux\footnote{\href{http://sammeth.net/confluence/display/SIM/Home}{flux simulator}}. Read
+flux\footnote{\url{http://sammeth.net/confluence/display/SIM/Home}{flux simulator}}. Read
 simulations have been restricted to the corresponding first chromosome of the respective species.
 Sample data is available for \textit{C. elegans} ce10 and \textit{Homo sapien} hg19. Each archive
 consists of:
@@ -67,77 +111,77 @@ consists of:
   frequencies
 \end{description}
 Available sample data organized by data type and species:
+\todo[author=michael]{we have to move the data to dieterichlab}
 \begin{itemize}
   \item
-  \href{http://www.age.mpg.com/software/jacusa/sample_data/hg19_chr1_gDNA_VS_cDNA.tar.gz}{hg19\_chr1\_gDNA\_VS\_cDNA.tar.gz}
+  \url{http://www.age.mpg.com/software/jacusa/sample_data/hg19_chr1_gDNA_VS_cDNA.tar.gz}{hg19\_chr1\_gDNA\_VS\_cDNA.tar.gz}
   \item
-  \href{http://www.age.mpg.com/software/jacusa/sample_data/hg19_chr1_cDNA_VS_cDNA.tar.gz}{hg19\_chr1\_cDNA\_VS\_cDNA.tar.gz}
+  \url{http://www.age.mpg.com/software/jacusa/sample_data/hg19_chr1_cDNA_VS_cDNA.tar.gz}{hg19\_chr1\_cDNA\_VS\_cDNA.tar.gz}
 \end{itemize}
-%\todo{This data has to be generated}
-%\begin{itemize}
-%  \item 
-%  \href{http://www.age.mpg.com/software/jacusa/sample_data/ce10_chrI_gDNA_VS_cDNA.tar.gz}{ce10\_chrI\_gDNA\_VS\_cDNA.tar.gz}
-%  \item 
-%  \href{http://www.age.mpg.com/software/jacusa/sample_data/ce10_chrI_cDNA_VS_cDNA.tar.gz}{ce10\_chrI\_cDNA\_VS\_cDNA.tar.gz}
-%\end{itemize}
-%--------------------------------------------------------------------------------------------------
+% --------------------------------------------------------------------------------------------------
+\subsection{Reverse transcriptase arrest event}
+\todo[author=michael]{What data should we provide here?}
+%---------------------------------------------------------------------------------------------------
 \section{Input}
-\subsection{Alignment files}
-JACUSA needs sorted and indexed BAM files. BAM is a standardized file format for
-efficient storage of alignments. Check the manuals for
-\footnote{\href{http://samtools.sourceforge.net/}{SAMtools/BCFtools}} and/or
-\footnote{\href{http://broadinstitute.github.io/picard/}{picard tools}} for how to use the
-respective tool to convert your alignment files to valid JACUSA input BAM.
+All JACUSA2 methods require sorted and indexed \url{https://samtools.github.io/hts-specs/SAMv1.pdf}{BAM} files.
+BAM is a standardized file format for efficient storage of alignments.
+Furthermore, JACUSA2 requires that the reference sequence is available either through the ``MD'' 
+\url{https://samtools.github.io/hts-specs/SAMtags.pdf}{tag} in BAM files or by providing the reference 
+sequence in indexed FASTA format with the command line option ``-R <reference.fasta>''.
+The ``MD'' contains mismatch information that allow to perform variant calling without providing.    
 
-In the following, commands for SAMtools are presented:
+Check the manuals of
+\url{http://samtools.sourceforge.net/}{SAMtools/BCFtools} and/or
+\url{http://broadinstitute.github.io/picard/}{picard tools} for how to use the
+respective tool to convert your alignment files to valid JACUSA2 input BAM.
+
+\subsection{Processing BAM files}
+In the following, commands for SAMtools are presented.
+
+To sort and index your raw BAM files perform the following sequence of commands:
 \begin{description}
 \item[SAM $\rightarrow BAM$] \begin{verbatim} samtools view -Sb mapping.sam > mapping.bam \end{verbatim}
 \item[sort BAM] \begin{verbatim} samtools sort mapping.bam mapping.sorted \end{verbatim} 
 \item[index BAM] \begin{verbatim} samtools index mapping.sorted.bam \end{verbatim}
 \end{description}
 
+Check your BAM file for the ``MD'' \url{https://samtools.github.io/hts-specs/SAMtags.pdf}{tag} 
+if you want to provide reference sequence information via this tag. 
+When your BAM files do not have the ``MD'' tag set correctly use SAMtools:
+\begin{verbatim}
+samtools calmd mapping.sorted.bam reference.fasta > mapping.sorted.MD.bam
+\end{verbatim}
+%---------------------------------------------------------------------------------------------------
+\subsubsection{Remove duplicates for variant calling}
+\todo[author=michael]{rephrase paragraph: for call it is recommended, for rt/lrt-arrest absolutely not!}
 It is a recommended pre-processing step to remove duplicate reads when identifying variants.
 Duplicated reads occur mostly due to PCR-artefacts. 
 They are likely to harbour false variants and most statistical test require that reads are sampled independently.  
-In the following, commands for picarf tools are presented:
+In the following, commands for picard tools are presented:
 \begin{verbatim} java -jar MarkDuplicates.jar \ 
   I=mapping.sorted.bam O=dedup_mapping.sorted.bam \ 
   M=duplication.info
 \end{verbatim}
-Invoke JACUSA with the additional command line option ``-F 1024'' to filter read that have been marked as duplicates.
-
-\subsubsection{Strand information}
-In v1.2, support for stranded paired end reads has been added to JACUSA. Depending on the employed sequencing library, 
-JACUSA can use the strand orientation to build pileups.
-
-\begin{center}
-\emph{WARNING} \\
-Since v1.2 the format of ``-P'' has changed!
-The format has been inspired by tophat's \href{http://ccb.jhu.edu/software/tophat/manual.shtml} library type parameter. 
-\end{center}
-
-With the command line parameter ``-P,--build-pileup <BUILD-PILEUP>'' the user can choose from combinations of:
+Invoke JACUSA2 with the additional command line option ``-F 1024'' to filter reads that have been marked as duplicates.
+%---------------------------------------------------------------------------------------------------
+\subsubsection{Library type and strand information}
+JACUSA2 supports stranded paired end and single ends reads. With the command line parameter 
+``-P <LIBRARY-TYPE> | -P1 <LIBRARY-TYPE> -P2 <LIBRARY-TYPE>'' the user can choose the underlying library type:
 \begin{description} 
-\item[FR-FIRSTSTRAND] STRANDED library - first strand sequenced,
+\item[RF-FIRSTSTRAND] STRANDED library - first strand sequenced,
 \item[FR-SECONDSTRAND] STRANDED library - second strand sequenced, and
 \item[UNSTRANDED] UNSTRANDED library.
 \end{description}
-to define if strand information will be utilized to build pileups.
-
-In order to identify RNA editing sites by comparing gDNA and \emph{stranded} RNA-Seq (single or paired end) use:
-\begin{description} 
-\item[first strand sequenced] ``-P UNSTRANDED,FR-FIRSTSTRAND''
-\item[second strand sequenced] ``-P UNSTRANDED,FR-SECONDSTRAND''
-\end{description}.
-When your RNA-Seq is unstranded use: ``-P UNSTRANDED,UNSTRANDED'' and infer the correct orientation from annnotation.
-%--------------------------------------------------------------------------------------------------
+The UNSTRANDED library type is not available for rt/lrt-arrest because an arrsest site can not unambiguously be  
+defined for this library type.
+%---------------------------------------------------------------------------------------------------
 \subsection{Traverse BED-like file}
-Variant detection can be limited to specific regions of the genome or transcriptome.  Provide a
-minimalistic BED-like file to restrict the search to this region(s) or site(s). Remaining region(s)
-of the BAM files will not be considered.
+Identification of interesting sites can be restricted to specific regions of the genome or transcriptome. 
+Provide a minimalistic BED-like file to limit the search to this region(s) or site(s). 
+Remaining region(s) of the BAM files will not be considered.
 
 In the following traverse file, the search is confined to a 100nt region on contig 1
-staring at 1,000 and a single site on contig 2 at coordinates 10,000:
+starting at 1,000 and a single site on contig 2 at coordinates 10,000:
 \begin{table}
 \centering
 \caption{Example of BED-like traverse file}
@@ -150,50 +194,49 @@ staring at 1,000 and a single site on contig 2 at coordinates 10,000:
 \multicolumn{3}{c}{}
 \end{tabular}
 \end{table}
-HINT: Many individual sites will slow down JACUSA. If possible, try to merge nearby sites into
-contiguous regions and extract specific sites from JACUSA output with
-bedtools\footnote{\href{http://bedtools.readthedocs.org/en/latest/}{bedtools}} intersect:
+
+HINT: Many individual sites will slow down JACUSA2. If possible, try to merge nearby sites into
+contiguous regions and extract specific sites from JACUSA2 output with \url{http://bedtools.readthedocs.org/en/latest/}{bedtools} 
+``intersect'':
 \begin{description}
 \item[merge sites] \begin{verbatim} 
-
 bedtools merge -d 500 singular_sites.bed > \ 
   contigous_regions.bed
 \end{verbatim}
-\item[run JACUSA] \begin{verbatim} 
 
-java -jar JACUSA.jar call-2 -b contigous_regions.bed -r
-JACUSA.out mapping_1.sorted.bam mapping_2.sorted.bam
+\item[run JACUSA2] \begin{verbatim} 
+java -jar JACUSA2.jar call-2 -b contigous_regions.bed -r
+JACUSA2.out mapping_1.sorted.bam mapping_2.sorted.bam
 \end{verbatim}
-\item[extract sites] \begin{verbatim}
 
-bedtools intersect -wa -a JACUSA.out -b singular_sites.bed
+\item[extract sites] \begin{verbatim}
+bedtools intersect -wa -a JACUSA2.out -b singular_sites.bed
 \end{verbatim}
 \end{description}
-%--------------------------------------------------------------------------------------------------
-\section{Output}
-JACUSA writes its output to a user defined file or a pipe. When using multiple threads, JACUSA will
-create a gzipped temporary file for each allocated thread. Chosen command line parameters
-and current genomic position are printed to the command prompt. Furthermore, depending on
-the provided command line parameters, JACUSA will generate a file with sites that have been
-identified as potential artefacts when ``-s" is provided. Currently, JACUSA supports the following
+%---------------------------------------------------------------------------------------------------
+\subsection{Output}
+JACUSA2 writes its output to a user defined file. When using multiple threads, JACUSA2 will
+create a temporary file for each allocated thread in the temporary directory that is \todo[author=michael]{user should be able to change this}
+provided by the operating system. 
+Chosen command line parameters and current genomic position are printed to the command prompt and serve as a status guard.\todo[author=michael]{add progress bar}
+Furthermore, depending on the provided command line parameters, JACUSA2 will generate a file with sites that have been
+identified as potential artefacts when ``-s'' is provided. Currently, JACUSA2 supports the following
 output formats, controlled by ``-f'':
 \begin{itemize}
-  \item Default (JACUSA output)
-  \item Variant Call Format
-  (VCF)\footnote{\href{http://samtools.github.io/hts-specs/VCFv4.1.pdf]}{VCF file format}}
+  \item Default (JACUSA2 output --- varies between JACUSA2 methods)
+  \item Variant Call Format (VCF)\footnote{\url{http://samtools.github.io/hts-specs/VCFv4.1.pdf]}{VCF file format}}
 \end{itemize}
 The default output format is based on
-BED6\footnote{\href{http://genome.ucsc.edu/FAQ/FAQformat.html\#format1}{BED file format}} with
-additional JACUSA specific columns. The actual number of columns depends on number of provided BAM
-files.
+BED6\footnote{\url{http://genome.ucsc.edu/FAQ/FAQformat.html\#format1}{BED file format}} with
+additional JACUSA2 methods specific columns. The actual number of columns depends on the JACUSA2 method and 
+the number of provided BAM files.
 \begin{table}[ht]
-\caption{JACUSA default output format}
+\caption{JACUSA2 default output format --- core elements}
 {\small
-\begin{tabular}{lcccccc|cccc}
-%contig & start & end & name & score & strand & bases11 & bases22 & info & filter\_info \\
-Column: & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\
+\begin{tabular}{lcccccc|ccc}
+Column: & 1 & 2 & 3 & 4 & 5 & 6 & \ldots & N-1 & N \\
 \hline
-& 1 & 100 & 101 & variant & $8.07\ldots$ & - & 0,0,0,6 & 0,6,0,0 & * & * \\	
+& 1 & 100 & 101 & variant & $8.07\ldots$ & - & JACUSA2 method specific & * & * \\	
 & \multicolumn{6}{c|}{\ldots} & \multicolumn{4}{c}{\ldots}
 \end{tabular}}
 \end{table}
@@ -207,15 +250,16 @@ variant. Higher number indicates a higher likelihood for a variant
 ``positive strand'', and ``negative strand'' respectively. If strand is != ``.'', then the following base columns
 will be indicating base counts according to the strand - inverted base count if on the ``negative
 strand''
-\item[(7,8) basesIJ] The number of base columns depends on the number of BAM files. In basesIJ: $I$
-corresponds to sample and $J$ to the respective replicate. Numbers indicate the base count of the
-following base vector: $(A, C, G, T)$
-\item[(9) info] Additional info for this specific site. Currently, details about the parameter
-estimation of the Dirichlet-Multinomial can be shown. If nothing provided, the empty field is equal
-to ``*''
-\item[(10) filter\_info] Relevant, if feature filter(s) $X$ have been provided with ``-a X'' on the
+\item[(7-N-2) method specific] The number of base columns depends on the JACUSA2 method --- check method specific explanation.
+\item[(N-1) info] Additional info for this specific site. Currently, details about the parameter
+estimation of the underlying distribution can be shown, and additional method specific data. 
+If nothing provided, the empty field is equal to ``*''
+\item[(N) filter\_info] Relevant, if feature filter(s) $X$ have been provided with ``-a X'' on the
 command line. The column will contain a comma-separated list of feature filters that predict this
-site to be a potential artefact. Possible values are: \\ 
+site to be a potential artefact. Possible values depend on the utilized JACUSA2-method: \\ 
+
+\section{Feature/Artefact filter}
+\todo[author=michael]{add filter figure from paper}
 \begin{tabular}{lp{.8\textwidth}}
 \textbf{Value} & \textbf{Description of potential artefact} \\
 \hline
@@ -225,102 +269,19 @@ I & Variant call in the vicinity of INDEL position \\
 S & Variant call in the vicinity of Splice Site \\
 Y & Variant call in the vicinity of homopolymer \\
 M & Max allowed alleles exceeded \\ 
-H & ``Control" sample contains non-homozygous pileup \\
-d & Some pileup exceeds max depth
+H & ``Control'' sample contains non-homozygous pileup \\
 \end{tabular}
 \end{description}
-%--------------------------------------------------------------------------------------------------
-\section{Usage}
-Calling JACUSA without any arguments will print the available tools which currently are:
-\begin{verbatim}
-java -jarJACUSA.jar
-	call-1  Call variants - one sample
-	call-2  Call variants - two samples
-  pileup  SAMtools like mpileup for two samples
-\end{verbatim}
-{\small
-\begin{verbatim}
-usage: jacusa.jar [OPTIONS] BAM1_1[,BAM1_2,BAM1_3,...] BAM2_1[,BAM2_2,BAM2_3,...]
-\end{verbatim}}
-\begin{center}
-{\small
-\begin{longtable}{p{.4\textwidth}p{.6\textwidth}}
- -a,--pileup-filter <PILEUP-FILTER>             & chain of PILEUP-FILTER to apply to pileups: \\
-                                                & B | Filter distance to Read Start/End. Default: 6:0.5 (F:distance:min\_ratio) \\
-                                                & R | Rare event filter. Default: 1:2:0.1 (R:pool:reads:level) \\
-                                                & S | Filter distance to Splice Site. Default: 6:0.5 (S:distance:min\_ratio) \\
-                                                & D | Filter distance to Read Start/End, Intron, and INDEL position. Default: 5:0.5 (D:distance:min\_ratio) \\
-                                                & H | Filter non-homozygous pileup/BAM in sample 1 or 2 (MUST be set to H:1 or H:2). Default: none \\
-                                                & I | Filter distance to INDEL position. Default: 6:0.5 (I:distance:min\_ratio) \\
-                                                & Y | Filter wrong variant calls in the vicinity of homopolymers. Default: 7 (Y:length) \\
-                                                & L | Min difference filter. Default: 0:0:0.1 (R:pool:reads:level) \\
-                                                & M | Max allowed alleles per parallel pileup. Default: 2 \\
-                                                & Separate multiple PILEUP-FILTER with ',' (e.g.: D,I) \\
- -b,--bed <BED>									                & BED file to scan for variants \\
- -C,--base-config <BASE-CONFIG> 				        & Choose what bases should be considered for variant calling: TC or AG or ACGT or AT$\ldots$. Default: ACGT \\
- -c,--min-coverage <MIN-COVERAGE>               & filter positions with coverage < MIN-COVERAGE. Default: 5 \\
- -c1,--min-coverage1 <MIN-COVERAGE1>            & filter 1 positions with coverage < MIN-COVERAGE1. Default: 5 \\
- -c2,--min-coverage2 <MIN-COVERAGE2>            & filter 2 positions with coverage < MIN-COVERAGE2. Default: 5 \\
- %-D,--debug                                     Enable debug modus
- -d,--max-depth <MAX-DEPTH>                     & max per-BAM depth. Default: -1 \\
- -d1,--max-depth1 <MAX-DEPTH1>                  & max per-sample 1 depth. Default: -1 \\
- -d2,--max-depth2 <MAX-DEPTH2>                  & max per-sample 2 depth. Default: -1 \\
- -F,--filter-flags <FILTER-FLAGS>               & filter reads with flags FILTER-FLAGS. Default: 0 \\
- -f,--output-format <OUTPUT-FORMAT>             & Choose output format: \\
-                                                & <*> D: Default JACUSA \\
-                                                & < > V: VCF Output format. Option -P will be ignored (VCF is unstranded) \\
-    --filterNH\_1 <NH-VALUE>                    & Max NH-VALUE for SAM tag NH \\
-    --filterNH\_2 <NH-VALUE>                    & Max NH-VALUE for SAM tag NH \\
-    --filterNM\_1 <NM-VALUE>                    & Max NM-VALUE for SAM tag NM \\
-    --filterNM\_2 <NM-VALUE>                    & Max NM-VALUE for SAM tag NM \\
- -h,--help                                      & Print usage information \\
- -i1,--invert-strand1                           & Invert strand of 1 sample. Default false \\
- -i2,--invert-strand2                           & Invert strand of 2 sample. Default false \\
- -m,--min-mapq <MIN-MAPQ>                       & filter positions with MAPQ < MIN-MAPQ. Default: 20 \\
- -m1,--min-mapq1 <MIN-MAPQ1>                    & filter 1 positions with MAPQ < MIN-MAPQ1. Default: 20 \\
- -m2,--min-mapq2 <MIN-MAPQ2>                    & filter 2 positions with MAPQ < MIN-MAPQ2. Default: 20 \\
- -P,--build-pileup <BUILD-PILEUP>               & Choose the library types and how parallel pileups are build for sample1(s1) and sample2(s2). \\
-                                                & Format: s1,s2. \\
-                                                & Possible values for s1 and s2: \\
-                                                & FR-FIRSTSTRAND    STRANDED library - first strand sequenced \\
-                                                & FR-SECONDSTRAND   STRANDED library - second strand sequenced \\
-                                                & UNSTRANDED    UNSTRANDED library \\
-                                                & default: UNSTRANDED,UNSTRANDED \\
- -p,--threads <THREADS>                         & use \# THREADS. Default: 1 \\
- -q,--min-basq <MIN-BASQ>                       & filter positions with base quality < MIN-BASQ. Default: 20 \\
- -q1,--min-basq1 <MIN-BASQ1>                    & filter 1 positions with base quality < MIN-BASQ1. Default: 20 \\
- -q2,--min-basq2 <MIN-BASQ2>                    & filter 2 positions with base quality < MIN-BASQ2. Default: 20 \\
- -R,--show-ref <SHOW-REF>                       & Add reference base to output. BAM file(s) must have MD field! \\
- -r,--result-file <RESULT-FILE>                 & results are written to RESULT-FILE or STDOUT if empty \\
- -s,--separate                                  & Put feature-filtered results in to a separate file (= RESULT-FILE.filtered)\\
- -T,--threshold <THRESHOLD>                     & Filter positions depending on test-statistic THRESHOLD default: DO NOT FILTER \\
- %-u,--modus <MODUS>                             & Choose between different modes: \\
- %                                               & <*> DirMult-CE : Compound Err. (estimated err.{0.01} + phred score) \\
- %                                               & < > DirMult-RCE : Robust Compound Err. \\
- -v,--version                                   & Print version information. \\
- -W,--thread-window-size <THREAD-WINDOW-SIZE>   & size of the window used per thread. Default: 100000 \\
- -w,--window-size <WINDOW-SIZE>                 & size of the window used for caching. Make sure this is greater than the read size and smaller than THREAD-WINDOW-SIZE>. Default:
- 10000
-\end{longtable}}
-\end{center}
-%--------------------------------------------------------------------------------------------------
-\subsection{Single sample mode}
-With the introduction of JACUSA v1.2, single sample support(call-1) has been added that allows calling variants against a reference. 
-Internally, an \textit{in silico} sample is created from information provided by the MD field in BAM files - see samtools manual for details on MD field.
-Single sample mode requires that BAM files contain the MD field. We strongly recommend to use ``samtools calmd'' to add or overwrite existing MD fields in BAM files:
-\begin{verbatim}
-samtools calmd mapping.sorted.bam reference.fasta > mapping.sorted.MD.bam
-\end{verbatim}
-After populating the MD field, variants against the reference can be called with:
-\begin{verbatim} 
-java -jar JACUSA.jar call-1 
--r JACUSA.out mapping.sorted.MD.bam
-\end{verbatim}
-%--------------------------------------------------------------------------------------------------
-\subsection{SAMtools like mpileup for two samples}
-See ``Call variant - two samples'' for details.
-%--------------------------------------------------------------------------------------------------
-\section{Identification of RNA editing sites}
+%---------------------------------------------------------------------------------------------------
+\section{Variant detection}
+\subsection{Identification of RNA editing sites}
+In order to identify RNA editing sites by comparing gDNA and \emph{stranded} RNA-Seq (single or paired end) use:
+\begin{description} 
+\item[first strand sequenced] ``-P1 UNSTRANDED -P2 RF-FIRSTSTRAND''
+\item[second strand sequenced] ``-P2 UNSTRANDED -P2 FR-SECONDSTRAND''
+\end{description}.
+When your RNA-Seq is unstranded use: ``-P1 UNSTRANDED -P2 UNSTRANDED'' and infer the correct orientation from annnotation.
+
 Use the following command line to identify RNA-DNA differences in BAM files that might give rise to RNA editing sites:
 \begin{verbatim}
 java -jar call-2 -r JACUSA.out -s -a H:1 gDNA.bam cDNA.bam
@@ -330,14 +291,70 @@ determines which sample has to be homomorph - in this case: gDNA.bam.
 
 Use the following command line to identify RNA-DNA differences:
 \begin{verbatim}
-java -jar call-2 -r JACUSA.out -s cDNA1.bam cDNA2.bam
+java -jar call-2 -r JACUSA2.out -s cDNA1.bam cDNA2.bam
 \end{verbatim}
 WARNING: If you want to identify RNA-RNA differences make sure NOT to use the filter ``-a H:x''! Otherwise, potential valid variants will be filtered out. 
+%---------------------------------------------------------------------------------------------------
+\section{Reverse transcriptase arrest events}
+\todo[author=michael]{add text}
+\section{Usage}
+Calling JACUSA2 without any arguments will print the available tools which currently are:
+\begin{verbatim}
+java -jar JACUSA2.jar
+  METHOD        DESCRIPTION
+  call-1        Call variants - 1 condition
+  call-2        Call variants - 2 conditions
+  pileup        SAMtools like mpileup (2 conditions)
+  rt-arrest     Reverse Transcription Arrest - 2 conditions
+  lrt-arrest    Linkage arrest to base substitution - 2 conditions
+Version: 		[...]
+Libraries: 	
+\end{verbatim}
+%---------------------------------------------------------------------------------------------------
+\subsection{call-1}
+Single sample (call-1) allows to call variants against a reference. 
+Internally, an \textit{in silico} sample is created from information that is provided by the ``MD'' field 
+in BAM files.
 
-%--------------------------------------------------------------------------------------------------
+The number of base columns depends on the number of BAM files. In basesIJ: $I$
+corresponds to sample and $J$ to the respective replicate. Numbers indicate the base count of the
+following base vector: $(A, C, G, T)$
+
+Sites that have a $>$ alleles are considered candidate variant sites and for this sites a test-score will be computed.
+\subsection{call-2}
+\todo[author=michael]{nicely combine call-1, call2}
+%---------------------------------------------------------------------------------------------------
+\subsection{pileup}
+See ``Call variant - two samples'' for details.
+\subsection{rt-arrest - 2 conditions}
+In this method base call counts of arrest and read through reads are modelled by a Beta-Binomial distribution and 
+differences between conditions are to be identified by means of a likelihood-ratio test. Subsequent approximiation 
+with $\chi^2$ distribution to compute a pvalue.
+
+Sites are considered candidate arrest sites, if in all BAM files there is at least one read through AND one  
+read arrest event. Furthermore, coverage filter and minBASQ of Base Call apply that will affect the output. 
+\subsection{lrt-arrest - 2 conditions}
+\todo[author=michael]{make fluent text}
+lrt-arrest allows to link pileups to their arrest position. Output consists of read arrest and read through counts and 
+a references to the associated arrest positions. There are cases, where currently an arrest position cannot be defined, 
+e.g.: non properly paired reads.
+Output consits of at least one line. Each separate arrest position adds an additional row is 
+The first row contains the unstratified data or total, the ``arrest\_pos'' column is set to ``*''.
+Any following sites with identical coordinates (contig, start, end, strand) will have a different 
+arrest position reference in the ``arrest\_pos'' column. 
+
+This method supports partial artefact filtering. Currently, filters only apply to the unstratified data --- 
+sites with ``*'' in in ``arrest\_pos''. Furthermore, coverage filter and minBASQ of Base Call apply 
+that will affect the output.
+%---------------------------------------------------------------------------------------------------
 \section{Used libraries}
-picard tools
-%\todo{complete list}
-%--------------------------------------------------------------------------------------------------
+\begin{tabular}{lrl}
+\bf{Libray} & \bf{Version} & \bf{Source} \\
+\hline
+htsjdk & 2.12.0 & \url{https://github.com/samtools/htsjdk} \\
+Apache commons-cli & 1.4 & \url{https://commons.apache.org/proper/commons-cli} \\
+Apache commons-math3 & 3.6.1 & \url{http://commons.apache.org/proper/commons-math}
+\end{tabular}
+%---------------------------------------------------------------------------------------------------
 \end{document}
-%--------------------------------------------------------------------------------------------------
+%---------------------------------------------------------------------------------------------------
